# type-safe-mq

./: .gitignore  LICENSE  Makefile  README.md  mock.proto
.github/workflows/: python-publish.yml
go/: go.mod
go/envelope/: envelope.go
go/tests/: envelope_test.go
go/tests/pb/: mock.pb.go
python/: pyproject.toml
python/tests/: mock_pb2.py  mock_pb2.pyi
python/type_safe_mq.egg-info/: PKG-INFO  SOURCES.txt
